# Lumina

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURSOR_SKILLS.md  CURSOR_SKILLS_GUIDE.md  Dockerfile  LICENSE  PHASE1_VALIDATION_REPORT.md  README.md  REFACTOR_SUMMARY.md  SECURITY_HARDENING.md  STAP_2_4_MULTI_SYMBOL_SWARM.md  cleanup_audit.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  lumina_analyse.md  lumina_analyse_2.md  lumina_analyse_corrections_expert.md  lumina_analyse_corrections_expert_3.md  lumina_analyse_v50.md  lumina_analyse_v51.md  lumina_analyse_v52.md  lumina_daytrading_bible.json  lumina_full_log.csv  lumina_launcher.py  lumina_model_catalog.json  lumina_runtime.py  lumina_sim_state.json  lumina_v45.1.1.py  lumina_visualizer.py  mypy.ini  nightly_infinite_sim.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-core.txt  (+13 more)
.streamlit/: config.toml
deploy/: .env.production.example  config.production.yaml  install_auto_update.sh  install_production.sh  preflight_production.sh  release.sh  run_preprod_smoke.ps1  slo_thresholds.json  smoke_preprod.sh  update_stack.sh
docs/: AGI_SAFETY.md  DEPENDENCIES.md  EVOLUTION_ROLLOUT_FRAMEWORK.md  OPERATOR_CARD_SIM_REAL_v52.md  PRODUCTION_CHECKLIST_v51.md  PRODUCTION_RUNBOOK_v51.md  RELEASE_CHECKLIST.md  RUNBOOK_DELTA_SIM_REAL_v52.md  api.md  architecture.md  integration.md  launcher-setup-and-model-management.md  llama-cpp-toolchain.md  production-machine-setup.md  release-gate-checklist.md  release-workflow.md  roadmap.md  sbom.json  trade-fill-reconciliation-runbook.md  why_we_keep_this.md
journal/: swarm_dashboard.html
logs/: structured_errors.jsonl
lumina-bible/: .gitignore  README.md  pyproject.toml
lumina_agents/: __init__.py  emotional_twin_profile.json  news_agent.py
lumina_bible/: __init__.py  bible_engine.py  chroma_community.py  core.py  vector_api.py  workflows.py
lumina_core/: __init__.py  backtest_workers.py  backtester_engine.py  backup_runtime_workers.py  bootstrap.py  config_loader.py  container.py  infinite_simulator.py  logging_utils.py  news_utils.py  (+12 more)
(+731 files in other folders)
